# ETME

./: CMakeLists.txt  README.md
core/include/: Buffer.h  BufferView.h  Cursor.h  LineBoundaries.h  Optional.h
core/src/: Buffer.cpp  BufferView.cpp  LineBoundaries.cpp
core/test/: BufferTest.cpp  LineBoundariesTest.cpp
core/test/files/: war_and_peace.txt
gtk/: .clang_complete  gtk.cpp
gtk/include/: BufferView.h  EtmeWindow.h
gtk/src/: BufferView.cpp  gtk.cpp
ncurses/: .clang_complete  ncurses.cpp
src/: Buffer.cpp  Buffer.h  BufferView.cpp  buffer.cpp  buffer.h  cursor.h  io.cpp  io.h  main.cpp
